package claseabstracta;

public interface Cuidador {
    String cuidar();
}
