package claseabstracta;

public interface Ladrador {
    String ladrar();
}
